--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mbk_footprints"]
 	path = mbk_footprints
 	url = https://github.com/nicoles/mbk_footprints.git
+[submodule "Type-C.pretty"]
+	path = Type-C.pretty
+	url = https://github.com/ai03-2725/Type-C.pretty.git
